src/App.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.card {
    width: 425px;
    min-height: 400px;
    padding: 20px;
    background-color: #fff;
    border-radius: 20px;
    border: 2px solid black;
    box-shadow: 10px 10px 0px black;
    display: flex;
    flex-direction: column;
    transition: transform 0.3s ease;
}

.card:hover {
    transform: scale(1.05) rotate3d(1, 1, 0, 25deg);
}

.card .cover-img {
    width: 100%;
    object-fit: cover;
    border-radius: 20px;
    margin-bottom: 20px;
}

.card .category {
    font-size: 20px;
    padding: 5px 10px;
    width: fit-content;
    border-radius: 5px;
    margin-bottom: 10px;
}

.card p.publish-date {
    font-size: 17px;
    font-weight: bold;
    margin-bottom: 20px;
}

.card h1.title {
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 25px;
}

.card p.description {
    font-size: 18px;
    margin-bottom: 20px;
    color: #665;
}

.card .category,
.card p.publish-date,
.card h1.title,
.card p.description,
.card .user-info .user-img,
.card .user-info .user-name{
    transition: all 0.3s ease;
}

.card .category:hover,
.card p.publish-date:hover,
.card h1.title:hover,
.card .description:hover,
.card .user-info .user-img:hover, 
.card .user-info .user-name:hover{
    transform: scale(1.05) rotate3d(0, 0, 0, 25deg);
    transform-origin:0%;
}

.card .user-info {
    display: flex;
    align-items: center;
}

.card .user-info .user-img {
    width: 50px;
    height: 50px;
    object-fit: cover;
    border-radius: 50%;
    margin-right: 20px;
}

.card .user-info h4.user-name {
    font-size: 18px;
    font-weight: bold;
}

